force-app/main/default/objects/FormResponse__c/FormResponse__c.object-meta.xml
<CustomObject>
    <label>FormResponse</label>
    <nameField>
        <displayFormat>FormPerson-{000}</displayFormat>
        <label>FormResponse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>