force-app/main/default/objects/FormResponse__c/fields/Form_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Section_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Section Name</label>
    <referenceTo>Form_Section__c</referenceTo>
    <relationshipLabel>FormResponses</relationshipLabel>
    <relationshipName>FormResponses</relationshipName>
    <type>Lookup</type>
</CustomField>