force-app/main/default/objects/FormResponse__c/fields/FormName__c.field-meta.xml
<CustomField>
    <fullName>FormName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>Forms__c</referenceTo>
    <relationshipLabel>FormResponses</relationshipLabel>
    <relationshipName>FormResponses</relationshipName>
    <type>Lookup</type>
</CustomField>