force-app/main/default/objects/FormResponse__c/fields/FormQuestion__c.field-meta.xml
<CustomField>
    <fullName>FormQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FormField</label>
    <referenceTo>FormFields__c</referenceTo>
    <relationshipLabel>FormResponses</relationshipLabel>
    <relationshipName>FormResponses</relationshipName>
    <type>Lookup</type>
</CustomField>