force-app/main/default/objects/FormResponse__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>